@@ -6,6 +6,7 @@ import java.time.ZoneOffset;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
 import java.util.Locale;
+import java.util.stream.Collectors;
 
 
 import com.devsuperior.dscommerce.entities.*;
@@ -54,8 +55,8 @@ public class OrderService {
 
     @Transactional(readOnly = true)
     public List<OrderDTO> findAll() {
-        List<Order> result = repository.findAll();
-        return result.stream().map(x -> new OrderDTO(x)).toList();
+        List<Order> result = repository.findAllWithItems();
+        return result.stream().map(x -> new OrderDTO(x)).collect(Collectors.toList());
     }
 
     @Transactional
